// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreadPanel Header expect that All filter for ThreadPanelHeader properly renders Show: All threads 1`] = `
<div
  className="mx_ThreadPanel__header"
>
  <span>
    Threads
  </span>
  <ContextMenuButton
    className="mx_ThreadPanel_dropdown"
    inputRef={
      Object {
        "current": null,
      }
    }
    isExpanded={false}
    onClick={[Function]}
  >
    Show: All threads
  </ContextMenuButton>
</div>
`;

exports[`ThreadPanel Header expect that My filter for ThreadPanelHeader properly renders Show: My threads 1`] = `
<div
  className="mx_ThreadPanel__header"
>
  <span>
    Threads
  </span>
  <ContextMenuButton
    className="mx_ThreadPanel_dropdown"
    inputRef={
      Object {
        "current": null,
      }
    }
    isExpanded={false}
    onClick={[Function]}
  >
    Show: My threads
  </ContextMenuButton>
</div>
`;

exports[`ThreadPanel Header expect that ThreadPanelHeader has the correct option selected in the context menu 1`] = `
<AccessibleButton
  aria-selected={true}
  className="mx_ThreadPanel_Header_FilterOptionItem"
  element="div"
  onClick={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    aria-selected={true}
    className="mx_AccessibleButton mx_ThreadPanel_Header_FilterOptionItem"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
  >
    <span>
      All threads
    </span>
    <span>
      Shows all threads from current room
    </span>
  </div>
</AccessibleButton>
`;
